# tmnf-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  analytics.py  batch_run.sh  build_centerline.py  constants.py  cross_grid_report.py  debug_straight.py  grid_search.py  instructions.py  lidar.py  main.py  obs_spec.py  param_explorer.py  policies.py  pyproject.toml  redo_analytics.py  setup_and_run.ps1  steering.py  track.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  game_support.yml  issue_template.md
.github/workflows/: auto-version-bump.yml  integration-tests.yml  tests.yml
clients/: base.py  instruction_client.py  rl_client.py
config/: gs_cmaes_v1.yaml  reward_config.yaml  training_params.yaml
distributed/: __init__.py  coordinator.py  protocol.py  worker.py
docs/: README_ASSETTO.md  README_TORCS.md
docs/framework/: README.md  base_env.md  game_adapter.md  obs_spec.md  policies.md  reward.md  run_config.md
docs/research/: competing-projects.md
experiments/tmnf/: README.md
framework/: README.md  __init__.py  alphazero.py  analytics.py  base_env.py  base_reward.py  belief.py  cmaes.py  dqn.py  env_loader.py  game_adapter.py  live_monitor.py  lstm.py  obs_memory.py  obs_spec.py  parallel_eval.py  policies.py  ppo.py  reinforce.py  replay.py  run_config.py  sb3_policies.py  sb3_support.py  self_play.py  training.py  version.py
games/: __init__.py
games/_template/: README.md  __init__.py  actions.py  adapter.py  analytics.py  env.py  obs_spec.py  reward.py
games/assetto_corsa/: actions.py  analytics.py  entry.py  env.py  obs_spec.py  reward.py
games/atari/: README.md  __init__.py  actions.py  adapter.py  analytics.py  env.py  obs_spec.py  reward.py
games/beamng/: actions.py  adapter.py  analytics.py  env.py  obs_spec.py  reward.py
games/car_racing/: README.md  actions.py  adapter.py  analytics.py  env.py  obs_spec.py  reward.py
games/iracing/: README.md  actions.py  adapter.py  analytics.py  controller.py  env.py  obs_spec.py  reward.py
games/rocket_league/: README.md  actions.py  adapter.py  analytics.py  env.py  obs_spec.py  reward.py
games/sc2/: README.md  actions.py  adapter.py  analytics.py  apm_limiter.py  belief_schema.py  client.py  cnn_policy.py  env.py  eval.py  map_access_gate.py  obs_spec.py  play.py  policies.py  replay_bc.py  reward.py  sc2_policies.py  tech_tree.py
games/tmnf/: README.md  __init__.py  actions.py  adapter.py  analytics.py  constants.py  curiosity.py  entry.py  env.py  instructions.py  lidar.py  obs_spec.py  policies.py  reward.py  simple_policy.py  state.py  steering.py  track.py
games/torcs/: actions.py  adapter.py  analytics.py  env.py  obs_spec.py  reward.py
infrastructure/: README.md
infrastructure/auth/: variables.tf
infrastructure/environment/: backend.conf.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infrastructure/remote_state/: variables.tf
plans/: 01-fix-dead-code-set-input-state.md  01-lookahead-observations.md  02-behavior-cloning-warmstart.md  04-adaptive-mutation-scale.md  07-termination-reason-tracking.md  11-behavior-cloning-warmstart.md  12-q-table-persistence.md  13-reward-nticks-consistency.md  14-multi-track-support.md  15-reward-config-yaml-validation.md  17-early-stopping-greedy-loop.md  issue-229-sc2-multi-instance-intra-run.md  issues-122-126-127-sc2-action-and-obs-redesign.md  the-current-reward-structuring-serialized-kernighan.md
rl/: env.py  main.py  pretrain.py  reward.py  train.py
scripts/: release.py
tests/: README.md  _parallel_eval_helpers.py  conftest.py  helpers.py  test_alphazero_mcts.py  test_analytics_no_matplotlib.py  test_analytics_task_metrics.py  test_atari_adapter.py  test_atari_env.py  test_atari_obs_spec.py  test_atari_reward.py  test_belief.py  test_build_centerline.py  test_cmaes_distribution.py  test_cmaes_policy.py  test_consolidate.py  test_cross_grid_report.py  test_curiosity.py  test_discretize_obs.py  test_distributed.py  test_dqn_upgrades.py  test_early_stopping.py  test_env_termination.py  test_epsilon_greedy_policy.py  test_framework_algorithm_equivalence.py  test_game_adapter.py  test_genetic_policy.py  test_grid_search.py  test_info_gain.py  test_iracing_controller.py  test_live_monitor.py  test_lstm_policy.py  test_mcts_policy.py  test_neural_dqn_policy.py  test_neural_net_policy.py  test_new_best_logging.py  test_obs_memory.py  test_parallel_eval.py  test_policy_docs.py  test_policy_registry.py  (+46 more)
(+1490 files in other folders)
