[tool.poetry]
name = "espenhk/tmnf-ai"
version = "0.2.6"
description = "Trackmania AI hobby project"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26"
gymnasium = ">=0.29"
pyyaml = ">=6.0"
matplotlib = ">=3.8"

[tool.poetry.group.tmnf.dependencies]
pandas = ">=2.0"
scipy = ">=1.12"
stable-baselines3 = ">=2.0"
tensorboard = ">=2.0"
opencv-python = ">=4.8"
mss = ">=9.0"
pywin32 = ">=306"
tminterface = ">=1.0"
pygbx = ">=0.3"

[tool.poetry.group.tmnf-test.dependencies]
pytest = ">=8.0"
scipy = ">=1.12"

[tool.poetry.group.assetto_corsa]
# Optional: the wrapper is imported lazily by
# games.assetto_corsa.clients.ac_client so Linux CI works without it.
optional = true

[tool.poetry.group.assetto_corsa.dependencies]
assetto-corsa-rl = ">=0.1"

[tool.poetry.group.torcs.dependencies]

[tool.poetry.group.sc2]
optional = true

[tool.poetry.group.sc2.dependencies]
# PySC2 brings in absl-py and the SC2 protocol stack; keep it optional so
# Windows-only TMNF setups don't pull it in. Requires a separate Blizzard
# SC2 binary install — see CLAUDE.md.
numpy = ">=1.26"
gymnasium = ">=0.29"
pyyaml = ">=6.0"
pysc2 = ">=4.0"
protobuf = ">=3.20,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that require real game binaries or heavy dependencies (deselect with '-m not integration')",
]
