[tool.poetry]
name = "espenhk/tmnf-ai"
version = "0.3.7"
description = "Trackmania AI hobby project"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26"
gymnasium = ">=0.29"
pyyaml = ">=6.0"
matplotlib = ">=3.8"

[tool.poetry.group.tmnf.dependencies]
pandas = ">=2.0"
scipy = ">=1.12"
stable-baselines3 = ">=2.0"
tensorboard = ">=2.0"
opencv-python = ">=4.8"
mss = ">=9.0"
pywin32 = ">=306"
tminterface = ">=1.0"
pygbx = ">=0.3"

[tool.poetry.group.tmnf-test.dependencies]
pytest = ">=8.0"
scipy = ">=1.12"

[tool.poetry.group.assetto_corsa]
# Optional: the wrapper is imported lazily by
# games.assetto_corsa.clients.ac_client so Linux CI works without it.
optional = true

[tool.poetry.group.assetto_corsa.dependencies]
assetto-corsa-rl = ">=0.1"

[tool.poetry.group.torcs.dependencies]

[tool.poetry.group.sc2]
optional = true

[tool.poetry.group.sc2.dependencies]
# PySC2 brings in absl-py and the SC2 protocol stack; keep it optional so
# Windows-only TMNF setups don't pull it in. Requires a separate Blizzard
# SC2 binary install — see CLAUDE.md.
numpy = ">=1.26"
gymnasium = ">=0.29"
pyyaml = ">=6.0"
pysc2 = ">=4.0"
protobuf = ">=3.20,<4.0"

[tool.poetry.group.atari]
optional = true

[tool.poetry.group.atari.dependencies]
# ale-py ships the MIT-licensed Atari 2600 ROMs and registers the
# ``ALE/<game>-v5`` gymnasium envs.  Keep it optional so non-Atari setups
# don't pull in the C++ ALE wheel.
ale-py = ">=0.10"

[tool.poetry.group.deep_rl]
# Optional, cross-platform. Stable-Baselines3 + SB3-Contrib back the gradient
# deep-RL policies (ppo, sac, td3, a2c, qr_dqn, recurrent_ppo). SB3 pulls in
# torch transitively. Install with: poetry install --with deep_rl
optional = true

[tool.poetry.group.deep_rl.dependencies]
stable-baselines3 = ">=2.0"
sb3-contrib = ">=2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that require real game binaries or heavy dependencies (deselect with '-m not integration')",
]
